--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,71 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
+alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.3.0
 async-timeout==4.0.3
 asyncpg==0.29.0
+attrs==23.2.0
+black==24.4.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
+dataclasses-json==0.6.4
+distro==1.9.0
 fastapi==0.110.2
+frozenlist==1.4.1
 greenlet==3.0.3
 h11==0.14.0
+httpcore==1.0.5
 httptools==0.6.1
+httpx==0.27.0
 idna==3.7
 Jinja2==3.1.3
+jsonpatch==1.33
+jsonpointer==2.4
+keyboard==0.13.5
+langchain==0.1.16
+langchain-community==0.0.34
+langchain-core==0.1.46
+langchain-openai==0.1.4
+langchain-text-splitters==0.0.1
+langsmith==0.1.51
 loguru==0.7.2
+Mako==1.3.3
 MarkupSafe==2.1.5
+marshmallow==3.21.1
+multidict==6.0.5
+mypy-extensions==1.0.0
+numpy==1.26.4
+openai==1.23.6
+orjson==3.10.1
+packaging==23.2
+pathspec==0.12.1
+platformdirs==4.2.1
+prompt-toolkit==3.0.43
 pydantic==2.7.1
 pydantic-settings==2.2.1
 pydantic_core==2.18.2
 python-dotenv==1.0.1
 PyYAML==6.0.1
 redis==5.0.4
+regex==2024.4.28
+requests==2.31.0
+ruff==0.4.2
 sniffio==1.3.1
 SQLAlchemy==2.0.29
 starlette==0.37.2
+tenacity==8.2.3
+tiktoken==0.6.0
 toml==0.10.2
+tqdm==4.66.2
+typing-inspect==0.9.0
 typing_extensions==4.11.0
 ujson==5.9.0
+urllib3==2.2.1
 uvicorn==0.29.0
 uvloop==0.19.0
 watchfiles==0.21.0
+wcwidth==0.2.13
 websockets==12.0
+yarl==1.9.4
