--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ async-timeout==4.0.3
 asyncpg==0.29.0
 attrs==23.2.0
 black==24.4.2
+cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -14,9 +15,19 @@ dataclasses-json==0.6.4
 distro==1.9.0
 fastapi==0.110.2
 frozenlist==1.4.1
+google-ai-generativelanguage==0.6.2
+google-api-core==2.19.0
+google-api-python-client==2.127.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.5.2
+googleapis-common-protos==1.63.0
 greenlet==3.0.3
+grpcio==1.63.0
+grpcio-status==1.62.2
 h11==0.14.0
 httpcore==1.0.5
+httplib2==0.22.0
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
@@ -27,6 +38,7 @@ keyboard==0.13.5
 langchain==0.1.16
 langchain-community==0.0.34
 langchain-core==0.1.46
+langchain-google-genai==1.0.3
 langchain-openai==0.1.4
 langchain-text-splitters==0.0.1
 langsmith==0.1.51
@@ -43,14 +55,20 @@ packaging==23.2
 pathspec==0.12.1
 platformdirs==4.2.1
 prompt-toolkit==3.0.43
+proto-plus==1.23.0
+protobuf==4.25.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pydantic==2.7.1
 pydantic-settings==2.2.1
 pydantic_core==2.18.2
+pyparsing==3.1.2
 python-dotenv==1.0.1
 PyYAML==6.0.1
 redis==5.0.4
 regex==2024.4.28
 requests==2.31.0
+rsa==4.9
 ruff==0.4.2
 sniffio==1.3.1
 SQLAlchemy==2.0.29
@@ -62,6 +80,7 @@ tqdm==4.66.2
 typing-inspect==0.9.0
 typing_extensions==4.11.0
 ujson==5.9.0
+uritemplate==4.1.1
 urllib3==2.2.1
 uvicorn==0.29.0
 uvloop==0.19.0
