--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ google-auth==2.29.0
 google-auth-httplib2==0.2.0
 google-generativeai==0.5.2
 googleapis-common-protos==1.63.0
+gpt4all==2.6.0
 greenlet==3.0.3
 grpcio==1.63.0
 grpcio-status==1.62.2
