--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ redis = "^5.0.4"
 langchain = "^0.1.20"
 langchain-openai = "^0.1.6"
 langchain-google-genai = "^1.0.3"
+langchain-google-vertexai = "^1.0.4"
 langfuse = "^2.31.0"
 
 [build-system]
