--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       - ENV=development
       - SQLALCHEMY_DATABASE_URI=postgresql+asyncpg://postgres:thangcho@localhost:5432/aisync
     network_mode: "host"
+    depends_on:
+      - postgres
+      - redis
 
   postgres:
     image: postgres
