--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ langchain-openai = "^0.1.6"
 langchain-google-genai = "^1.0.3"
 langchain-google-vertexai = "^1.0.4"
 langfuse = "^2.31.0"
+pgvector = "^0.2.5"
+numpy = "^1.26.4"
+psycopg2 = "^2.9.9"
 
 [build-system]
 requires = ["poetry-core"]
