--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ langfuse = "^2.31.0"
 pgvector = "^0.2.5"
 numpy = "^1.26.4"
 gpt4all = "^2.7.0"
+tokencost = "^0.1.10"
 
 [build-system]
 requires = ["poetry-core"]
