--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ numpy = "^1.26.4"
 gpt4all = "^2.7.0"
 langchain-anthropic = "^0.1.16"
 langchain-community = "^0.2.6"
+tokencost = "^0.1.11"
 
 [build-system]
 requires = ["poetry-core"]
