--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ gpt4all = "^2.7.0"
 langchain-anthropic = "^0.1.16"
 langchain-community = "^0.2.6"
 tokencost = "^0.1.11"
+langgraph = "^0.1.6"
 
 [build-system]
 requires = ["poetry-core"]
