--- a/machine/robot/db/alembic.ini
+++ b/machine/robot/db/alembic.ini
@@ -2,7 +2,8 @@
 
 [alembic]
 # path to migration scripts
-script_location = migrations
+# Use forward slashes (/) also on windows to provide an os agnostic path
+script_location = machine/robot/db/migrations
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
@@ -22,8 +23,7 @@ prepend_sys_path = .
 # leave blank for localtime
 # timezone =
 
-# max length of characters to apply to the
-# "slug" field
+# max length of characters to apply to the "slug" field
 # truncate_slug_length = 40
 
 # set to 'true' to run the environment during
@@ -36,10 +36,10 @@ prepend_sys_path = .
 # sourceless = false
 
 # version location specification; This defaults
-# to migrations/versions.  When using multiple version
+# to machine/robot/db/migrations/versions.  When using multiple version
 # directories, initial revisions must be specified with --version-path.
 # The path separator used here should be the separator specified by "version_path_separator" below.
-# version_locations = %(here)s/bar:%(here)s/bat:migrations/versions
+# version_locations = %(here)s/bar:%(here)s/bat:machine/robot/db/migrations/versions
 
 # version path separator; As mentioned above, this is the character used to split
 # version_locations. The default within new alembic.ini files is "os", which uses os.pathsep.
