--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ langchain-community = "^0.2.6"
 tokencost = "^0.1.11"
 langgraph = "^0.1.8"
 pgvector = "^0.3.1"
+sentence-transformers = "^3.0.1"
 
 [build-system]
 requires = ["poetry-core"]
