--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ tokencost = "^0.1.11"
 langgraph = "^0.1.8"
 pgvector = "^0.3.1"
 sentence-transformers = "^3.0.1"
+langchain-ollama = "^0.1.0"
 
 [build-system]
 requires = ["poetry-core"]
