--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ langgraph = "^0.1.8"
 pgvector = "^0.3.1"
 sentence-transformers = "^3.0.1"
 langchain-ollama = "^0.1.0"
+psycopg2-binary = "^2.9.9"
 
 [build-system]
 requires = ["poetry-core"]
