--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "fastapi-seed"
+name = "aisync"
 version = "0.1.0"
-description = "FastAPI Boilerplate"
+description = "Customize your AI with this simple API"
 authors = ["loctvl842 <loclepnvx@gmail.com>"]
 license = "MIT"
 readme = "README.md"
@@ -28,8 +28,13 @@ asyncpg = "^0.29.0"
 redis = "^5.0.4"
 supervisor = "^4.2.5"
 httpx = "^0.27.2"
-tenacity = "^9.0.0"
 dramatiq = "^1.17.0"
+ujson = "^5.10.0"
+click = "^8.1.7"
+langchain = "^0.3.3"
+tokencost = "^0.1.12"
+langchain-openai = "^0.2.2"
+langgraph = "^0.2.39"
 
 
 [build-system]
