--- a/packages/cli/pyproject.toml
+++ b/packages/cli/pyproject.toml
@@ -7,7 +7,7 @@ name = "aisync-cli"
 version = "0.1.0"
 description = ""
 authors = ["loctvl842 <loclepnvx@gmail.com>"]
-readme = "README.md"
+# readme = "README.md"
 packages = [{ include = "aisync_cli" }]
 
 [tool.poetry.dependencies]
