--- a/packages/core/pyproject.toml
+++ b/packages/core/pyproject.toml
@@ -7,7 +7,7 @@ name = "aisync"
 version = "0.1.0"
 description = "AISync"
 authors = ["loctvl842 <loclepnvx@gmail.com>"]
-readme = "README.md"
+# readme = "README.md"
 packages = [{ include = "aisync" }]
 
 [tool.poetry.dependencies]
