--- a/packages/api/pyproject.toml
+++ b/packages/api/pyproject.toml
@@ -7,7 +7,7 @@ name = "aisync-api"
 version = "0.1.0"
 description = ""
 authors = ["loctvl842 <loclepnvx@gmail.com>"]
-# readme = "README.md"
+readme = "README.md"
 packages = [{ include = "aisync_api" }]
 
 [tool.poetry.dependencies]
@@ -17,3 +17,5 @@ fastapi = "^0.115.5"
 uvicorn = "^0.32.1"
 toml = "^0.10.2"
 jinja2 = "^3.1.4"
+websockets = "^14.1"
+watchfiles = "^1.0.0"
