--- a/packages/core/pyproject.toml
+++ b/packages/core/pyproject.toml
@@ -7,7 +7,7 @@ name = "aisync"
 version = "0.1.0"
 description = "AISync"
 authors = ["loctvl842 <loclepnvx@gmail.com>"]
-# readme = "README.md"
+readme = "README.md"
 packages = [{ include = "aisync" }]
 
 [tool.poetry.dependencies]
@@ -18,6 +18,7 @@ pydantic-settings = "^2.6.1"
 loguru = "^0.7.2"
 tokencost = "^0.1.16"
 langchain-openai = "^0.2.6"
+langchain-google-genai = "^2.0.7"
 
 [tool.ruff]
 line-length = 120
