--- a/packages/api/pyproject.toml
+++ b/packages/api/pyproject.toml
@@ -1,21 +1,21 @@
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry]
+[tool.hatch.build.targets.wheel]
+packages = ["src/aisync_api"]
+
+[project]
 name = "aisync-api"
-version = "0.1.0"
+version = "0.0.1"
 description = ""
-authors = ["loctvl842 <loclepnvx@gmail.com>"]
+authors = [{name = "loctvl842", email = "loclepnvx@gmail.com"}]
 readme = "README.md"
-packages = [{ include = "aisync_api" }]
-
-[tool.poetry.dependencies]
-python = "^3.12"
-aisync = { path = "../core", develop = true }
-fastapi = "^0.115.5"
-uvicorn = "^0.32.1"
-toml = "^0.10.2"
-jinja2 = "^3.1.4"
-websockets = "^14.1"
-watchfiles = "^1.0.0"
+dependencies = [
+  "aisync", # local package (AISync Core)
+  "fastapi>=0.115.8",
+  "uvicorn>=0.34.0",
+  "toml>=0.10.2",
+  "jinja2>=3.1.4",
+  "websockets>=14.2",
+]
