--- a/packages/cli/pyproject.toml
+++ b/packages/cli/pyproject.toml
@@ -1,21 +1,25 @@
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry]
+[tool.hatch.build.targets.wheel]
+packages = ["src/aisync_cli"]
+
+[project]
 name = "aisync-cli"
-version = "0.1.0"
+version = "0.0.1"
 description = "AISync CLI"
-authors = ["loctvl842 <loclepnvx@gmail.com>"]
+authors = [{name = "loctvl842", email = "loclepnvx@gmail.com"}]
 readme = "README.md"
-packages = [{ include = "aisync_cli" }]
+dependencies = [
+  "aisync", # local package (AISync Core)
+  "click>=8.1.8",
+  "fastapi>=0.115.8",
+  "pathspec>=0.12.1",
+  "uvicorn>=0.34.0",
+  "watchfiles>=1.0.4",
+  "websockets>=14.2",
+]
 
-[tool.poetry.dependencies]
-python = "^3.12"
-aisync = { path = "../core", develop = true }
-click = "^8.1.7"
-websockets = "^14.1"
-fastapi = "^0.115.6"
-
-[tool.poetry.scripts]
+[project.scripts]
 aisync = "aisync_cli.cli:main"
