--- a/packages/core/pyproject.toml
+++ b/packages/core/pyproject.toml
@@ -1,24 +1,25 @@
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry]
+[tool.hatch.build.targets.wheel]
+packages = ["src/aisync"]
+
+[project]
 name = "aisync"
-version = "0.1.0"
-description = "AISync"
-authors = ["loctvl842 <loclepnvx@gmail.com>"]
+version = "0.0.1"
+description = "AISync Core"
+authors = [{ name = "loctvl842", email = "loclepnvx@gmail.com" }]
 readme = "README.md"
-packages = [{ include = "aisync" }]
-
-[tool.poetry.dependencies]
-python = "^3.12"
-langchain = "^0.3.7"
-langgraph = "^0.2.39"
-pydantic-settings = "^2.6.1"
-loguru = "^0.7.2"
-tokencost = "^0.1.16"
-langchain-openai = "^0.2.6"
-langchain-google-genai = "^2.0.7"
+dependencies = [
+  "langchain>=0.3.7",
+  "langgraph>=0.2.39",
+  "pydantic-settings>=2.6.1",
+  "loguru>=0.7.2",
+  "tokencost>=0.1.16",
+  "langchain-openai>=0.2.6",
+  "langchain-google-genai>=2.0.7",
+]
 
 [tool.ruff]
 line-length = 120
