feat(auth, database): Implement role-based access control and improve database management
- Added new RBAC models (TblUser, TblRole, TblUserRole, TblPermission, TblRolePermission) to support fine-grained access control.
- Introduced `TblTeam` and `TblProject` models to associate users and roles with projects.
- Improved database session handling with retries, transaction management, and role-based session handling.
- Enhanced database logging with a custom SQLAlchemy logger for better observability.
- Updated database health check mechanism and error handling.
- Removed deprecated `auth_user` migration and replaced it with a structured RBAC model.
- Introduced `/auth/signup` and `/auth/signin` endpoints for user authentication.
- Refactored API exception handling to standardize error responses.
- Added `pyjwt` and `itsdangerous` dependencies for authentication token management.
- Updated `.gitignore` to exclude Ruff cache.

This commit improves security, scalability, and maintainability of the authentication system and database interactions.

Breaking changes:
- Refactor database session management interface
- Update database models schema

--- a/packages/api/pyproject.toml
+++ b/packages/api/pyproject.toml
@@ -12,7 +12,7 @@ description = ""
 authors = [{ name = "loctvl842", email = "loclepnvx@gmail.com" }]
 readme = "README.md"
 dependencies = [
-  "aisync",                    # local package (AISync Core)
+  "aisync", # local package (AISync Core)
   "fastapi>=0.115.8",
   "uvicorn>=0.34.0",
   "toml>=0.10.2",
@@ -22,6 +22,8 @@ dependencies = [
   "prometheus-client>=0.21.1",
   "asyncpg>=0.30.0",
   "alembic>=1.14.1",
+  "pyjwt>=2.10.1",
+  "itsdangerous>=2.2.0",
 ]
 
 [dependency-groups]
