feat: enforce Python 3.12 requirement and improve development setup
- Added `requires-python = ">=3.12"` in all `pyproject.toml` files to ensure compatibility with Python 3.12
- Updated `Makefile` to include a `start` command for running the FastAPI server in development mode using `uv`
- Cleaned up dependency formatting in `pyproject.toml` files for better readability

--- a/packages/api/Makefile
+++ b/packages/api/Makefile
@@ -37,6 +37,13 @@ options:
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | awk 'BEGIN {FS = ":.*?## "}; {printf "  \033[36m%-22s\033[0m %s\n", $$1, $$2}' | sort
 
 
+### Development
+
+.PHONY: start
+start: ## Start the server
+	FASTAPI_ENV=development uv run python -m aisync_api.main
+
+
 ### Code quality
 
 .PHONY: fix-lint
