--- a/packages/dev/pyproject.toml
+++ b/packages/dev/pyproject.toml
@@ -11,6 +11,7 @@ version = "0.0.1"
 description = "AISync Dev"
 authors = [{ name = "loctvl842", email = "loclepnvx@gmail.com" }]
 readme = "README.md"
+requires-python = ">=3.12"
 dependencies = [
   "aisync",           # local package (AISync Core)
   "fastapi>=0.115.6",
