--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.0.1"
 description = "AISync mono-repo"
 authors = [{ name = "loctvl842", email = "loclepnvx@gmail.com" }]
 readme = "README.md"
+requires-python = ">=3.12"
 
 [tool.uv.sources]
 aisync = { workspace = true }
