feat: add registry store

--- a/packages/core/pyproject.toml
+++ b/packages/core/pyproject.toml
@@ -18,8 +18,8 @@ dependencies = [
   "pydantic-settings>=2.6.1",
   "loguru>=0.7.2",
   "tokencost>=0.1.16",
-  "langchain-openai>=0.2.6",
-  "langchain-google-genai>=2.0.7",
+  "gitpython>=3.1.44",
+  "aiofiles>=24.1.0",
 ]
 
 [tool.ruff]
