refactor(core): suits location - move to ~

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,8 @@ FROM python:3.12-slim-bookworm AS builder
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
 RUN apt-get update && apt-get install -y --no-install-recommends git \
+    # binutils is required for pyinstaller
+    && apt-get install -y binutils \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app/packages/core
