--- a/packages/api/Makefile
+++ b/packages/api/Makefile
@@ -8,32 +8,30 @@ help: header usage options ## Print help
 
 .PHONY: header
 header:
-	@echo -ne "\033[34mEnvironment\033[0m"
-	@echo ""
-	@echo -ne "\033[34m---------------------------------------------------------------\033[0m"
-	@echo ""
-	@echo -n -e "\033[33mAPP_NAME: \033[0m"
-	@echo -e "\033[35m$(APP_NAME)\033[0m"
-	@echo -n -e "\033[33mAPP_VERSION: \033[0m"
-	@echo -e "\033[35m$(APP_VERSION)\033[0m"
-	@echo ""
+	@printf "\033[34mEnvironment\033[0m\n"
+	@printf "\033[34m---------------------------------------------------------------\033[0m\n"
+	@printf "\033[33mAPP_NAME: \033[0m"
+	@printf "\033[35m$(APP_NAME)\033[0m"
+	@printf "\n"
+	@printf "\033[33mAPP_VERSION: \033[0m"
+	@printf "\033[35m$(APP_VERSION)\033[0m\n"
+	@printf "\n"
 
 .PHONY: usage
 usage:
-	@echo -ne "\033[034mUsage\033[0m"
-	@echo ""
-	@echo -ne "\033[34m---------------------------------------------------------------\033[0m"
-	@echo ""
-	@echo -n -e "\033[37mmake [options] \033[0m"
-	@echo ""
-	@echo ""
+	@printf "\033[034mUsage\033[0m"
+	@printf "\n"
+	@printf "\033[34m---------------------------------------------------------------\033[0m"
+	@printf "\n"
+	@printf "\033[37mmake [options] \033[0m"
+	@printf "\n\n"
 
 .PHONY: options
 options:
-	@echo -ne "\033[34mOptions\033[0m"
-	@echo ""
-	@echo -ne "\033[34m---------------------------------------------------------------\033[0m"
-	@echo ""
+	@printf "\033[34mOptions\033[0m"
+	@printf "\n"
+	@printf "\033[34m---------------------------------------------------------------\033[0m"
+	@printf "\n"
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | awk 'BEGIN {FS = ":.*?## "}; {printf "  \033[36m%-22s\033[0m %s\n", $$1, $$2}' | sort
 
 
